# Cargo.toml

[package]
name = "zync"
version = "0.1.0"
edition = "2021"
authors = ["Anas Shashaey"]
description = "Zotero WebDAV Server Over LAN"
repository = "https://github.com/she3o/zync"
license = "AGPL-3.0"
keywords = ["zotero", "webdav", "server", "sync", "bibliography"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dav-server = "0.5.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

# End of Cargo.toml
